[gd_scene load_steps=7 format=3 uid="uid://ddqo064yy0neb"]

[ext_resource type="Script" path="res://Scripts/FSMs/State Machines/behaviour_state_machine.gd" id="1_kocdq"]
[ext_resource type="Script" path="res://Scripts/FSMs/States/BehaviourStates/idle_be_state.gd" id="2_3gix4"]
[ext_resource type="Script" path="res://Scripts/FSMs/States/BehaviourStates/roaming_be_state.gd" id="3_gvp8c"]
[ext_resource type="Script" path="res://Scripts/FSMs/States/BehaviourStates/chasing_be_state.gd" id="4_sa0vv"]
[ext_resource type="Script" path="res://Scripts/FSMs/States/BehaviourStates/search_be_state.gd" id="5_dujkv"]
[ext_resource type="Script" path="res://Scripts/FSMs/States/BehaviourStates/attack_behaviour_state.gd" id="6_mhm7p"]

[node name="BehaviourStateMachine" type="Node" node_paths=PackedStringArray("current_state")]
script = ExtResource("1_kocdq")
current_state = NodePath("IdleBehaviourState")

[node name="IdleBehaviourState" type="Node" parent="."]
script = ExtResource("2_3gix4")

[node name="RoamingBehaviourState" type="Node" parent="."]
script = ExtResource("3_gvp8c")

[node name="ChasingBehaviourState" type="Node" parent="."]
script = ExtResource("4_sa0vv")

[node name="SearchBehaviourState" type="Node" parent="."]
script = ExtResource("5_dujkv")

[node name="AttackBehaviorState" type="Node" parent="."]
script = ExtResource("6_mhm7p")
